--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta charset="utf-8" />
-    <title>Redirecting to WNRS</title>
-    <meta http-equiv="refresh" content="0; URL=https://jonathan-lph.github.io/wnrs">
-    <link rel="canonical" href="https://jonathan-lph.github.io/wnrs">
+    <title>Redirecting to Porfolio</title>
+    <meta http-equiv="refresh" content="0; URL=https://jonathanl.dev">
+    <link rel="canonical" href="https://jonathanl.dev">
     <meta name="author" content="jonathan-lph" />
     <script data-ad-client="ca-pub-2618053317077782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
